--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "postgresql": "^0.0.1",
     "prisma": "^5.22.0",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-router-dom": "^7.0.1"
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
     "@types/node": "^20",
